# Documents2

./: .gitignore  createComponent.sh  pa.code-workspace
code/blender/: screw.py
code/c/hovb3a/: func assign by pointer.c  macro.c  str.c  struct.c
code/cpp/_/: CMakeLists.txt  Doxyfile
code/cpp/_/src/: api-key-youtube.txt  functions.cpp  functions.h  main.cpp  main.cpp1  urls.txt
code/cpp/_/tests/: functions.test.cpp  main.test.cpp
code/cpp/hovb3a/: array.cpp  download.cpp  pointer.c  string.cpp
code/freecad/: резьба.py
code/js/_/: jest.config.js  jsconfig.json  package-lock.json  package.json  tasks.json
code/js/_/tests/: 1.test.js
code/js/hovb3a/: 1.js  ecma.js
code/js/hovb3a/src/: text.js
code/js/mediaplayer/: index.html  script.js  style.css
code/kivy/hanom1hatevb/: README.md  requirements.txt:
code/kivy/hanom1hatevb/src/: actions.py  main.py  models.py  numbers.yaml  reminders.json  validators.py  views.py
code/linux/: bash  bashrc  install.sh  js  py
code/platformio/: launch.json  platformio.ini
code/platformio/arduino/_/: bitcount.cpp  color.cpp  comunication.cpp  flags.cpp  (+12 more)
code/py/PhiloStone/: buildozer.spec  dataManager.py  layout.py  logger.py  main.py  templateForEveryDay.tsv
code/py/Player/: app.py  layout.kv  main.py  playlistFileNode.py  playlistManager.py  utils.py
code/py/filesStructureGenerator/: README.md
code/py/videoSearcherDownloader/: README.md
code/reactJS/kolo/: README.md  generateFileList.js  package-lock.json  package.json
code/reactNative/kolodar/: App.js  app.json  mu_release_key.keystore  package.json
(+449 files in other folders)
